Initial stable